# gsheetquery

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/modules/: client.rst  collection.rst  database.rst
gsheetquery/: Client.py  Collection.py  Database.py  Model.py  __init__.py  client.py  collection.py  database.py  utils.py
gsheetquery/tests/: ClientTest.py  DatabaseTest.py  IntegrationTest.py  client_test.py  collection_test.py  database_test.py  integration_test.py  utils_test.py
